[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "not-quite-lisp"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "jgvlf", email = "joaogabrielvlf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[project.optional-dependencies]
project = [
  "pre-commit>3.1",
  "coverage[toml]>=6.5",
  "pytest",
  "mypy>=1.0.0",
  "ruff",
]
test = [
  "pytest",
]

[project.urls]
Documentation = "https://github.com/jgvlf/Not_Quite_Lisp#readme"
Issues = "https://github.com/jgvlf/Not_Quite_Lisp/issues"
Source = "https://github.com/jgvlf/Not_Quite_Lisp"

[tool.hatch.version]
path = "src/not_quite_lisp/__about__.py"

[tool.coverage.run]
source_pkgs = ["not_quite_lisp", "tests"]
branch = true
parallel = true
omit = [
  "src/not_quite_lisp/__about__.py",
]

[tool.coverage.paths]
not_quite_lisp = ["src/not_quite_lisp", "*/not-quite-lisp/src/not_quite_lisp"]
tests = ["tests", "*/not-quite-lisp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/no_quite_lisp/*.py", "tests/**/*.py"]
exclude = []

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
ignore = ["TRY", "ARG002"]
